--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ rust:
   - stable
   - beta
   - nightly
-script: ci/pre_commit.sh
+script: ./pre_commit.sh
 notifications:
   email:
     on_success: never
