--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,10 @@ rust:
   - stable
   - beta
   - nightly
+matrix:
+  allow_failures:
+    - rust: nightly
+  fast_finish: true
 before_script:
   - rustup component add clippy rustfmt
 script:
