Add token benchmark using Criterion
Not yet useful. After I've implemented _removal_ of ranges,
then I'm thinking of using this to compare a couple of different
changes to the internal representation of RangeSet.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,10 @@ categories = ["data-structures"]
 [dependencies]
 
 [dev-dependencies]
-permutator = "0.3.3"
+permutator = "0.3"
+criterion = "0.2"
+rand = "0.6"
+
+[[bench]]
+name = "kitchen_sink"
+harness = false
