Allow Appveyor failures on nightly
In particular, skeptic tests are currently broken on nightly,
so I don't want to hear about this.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,6 +8,10 @@ environment:
     - APPVEYOR_RUST_CHANNEL: stable
     - APPVEYOR_RUST_CHANNEL: nightly
 
+matrix:
+  allow_failures:
+    - APPVEYOR_RUST_CHANNEL: nightly
+
 install:
   # Install Rust, x86_64-pc-windows-msvc host
   - curl -sSf -o rustup-init.exe https://win.rustup.rs/
