--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ Contiguous and overlapping ranges that map to the same value are coalesced into 
 categories = ["data-structures"]
 
 [dependencies]
+serde = { version = "1", optional = true }
 
 [dev-dependencies]
 permutator = "0.4"
@@ -23,8 +24,10 @@ criterion = "0.3"
 rand = "0.8"
 chrono = "0.4" # For examples
 rustc_version = "0.4"
+serde_json = "1"
 
 [features]
+serde1 = ["serde"]
 # So we can run doc tests from "README.md".
 nightly = []
 
