Fix empty ranges returned by `Gaps` iterators
They were sometimes returning empty ranges still,
and the implementation was unnecessarily complex.
There may well have been other bugs hiding in there.

Fixes https://github.com/jeffparsons/rangemap/issues/43.

This also adds fuzzing of the gaps iterators to get
a bit more confidence that they're actually right now,
including fuzzing the size of the outer range.

--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -31,3 +31,15 @@ name = "rangemap_inclusive_coalesce"
 path = "fuzz_targets/rangemap_inclusive_coalesce.rs"
 test = false
 doc = false
+
+[[bin]]
+name = "rangemap_gaps"
+path = "fuzz_targets/rangemap_gaps.rs"
+test = false
+doc = false
+
+[[bin]]
+name = "rangemap_inclusive_gaps"
+path = "fuzz_targets/rangemap_inclusive_gaps.rs"
+test = false
+doc = false
