--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,11 @@ serde = { version = "1", optional = true }
 
 [dev-dependencies]
 permutator = "0.4"
-criterion = "0.3"
+# Criterion bumps its MSRV in 0.3.6; it is probably reasonable
+# to update rangemap's MSRV, too, but until I actually publish
+# a policy on that I'm going to avoid doing a big bump right now.
+# (Later problem!)
+criterion = "= 0.3.5"
 rand = "0.8"
 chrono = "0.4" # For examples
 rustc_version = "0.4"
