--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,8 @@ rand = "0.8"
 chrono = "0.4" # For examples
 rustc_version = "0.4"
 serde_json = "1"
+proptest = "1.4.0"
+test-strategy = "0.3.1"
 
 [features]
 serde1 = ["serde"]
