--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,11 @@ Contiguous and overlapping ranges that map to the same value are coalesced into 
 """
 categories = ["data-structures"]
 rust-version = "1.66.0"
+exclude = [
+    ".github/*",
+    "bors.toml",
+    "pre_commit.sh",
+]
 
 [dependencies]
 quickcheck = { version = "1.0.3", optional = true }
