--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,7 @@ jobs:
     if: ${{ success() }}
     needs:
       - test
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: CI succeeded
         run: exit 0
